<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="FB_AlarmDBListener" Id="{8bc61472-16bb-4769-ad40-cbce77b10d49}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_AlarmDBListener IMPLEMENTS I_Observer
VAR
	_lang_code :DINT := 1033;
	// For alarm IoT report
	data_buffer		: ARRAY [0..AlarmEventParam.EVENT_LOG_BUFFER_SIZE - 1] OF EventActivityFields;
	_recorder		: IRecordDB;
	queue_controller	: BufferedRecord(buffer_pointer := ADR(data_buffer), recorder := _recorder);		// record controller
	_machine_name	: STRING := 'Not defined';
	{attribute 'TcEncoding' := 'UTF-8'}
	event_text		: STRING;
	event_entry		: TcEventEntry;	
	_event_activity	: EventActivityFields;
	pAlarm			: POINTER TO FB_Alarm;
	_step 			: UINT;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[]]></ST>
    </Implementation>
    <Method Name="FB_init" Id="{8c8181f4-4dd5-46e2-b5cf-1479d2bbfe7c}">
      <Declaration><![CDATA[METHOD FB_init : BOOL
VAR_INPUT
	bInitRetains : BOOL; // if TRUE, the retain variables are initialized (warm start / cold start)
	bInCopyCode : BOOL;  // if TRUE, the instance afterwards gets moved into the copy code (online change)
	//queue_controller : POINTER TO BufferedRecord;
	recorder	:	IRecordDB;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[//_queue_controller := queue_controller;
_recorder := recorder;]]></ST>
      </Implementation>
    </Method>
    <Property Name="machine_name" Id="{d3553891-39ff-4c04-889d-3055cd1da17e}">
      <Declaration><![CDATA[PROPERTY machine_name : STRING]]></Declaration>
      <Get Name="Get" Id="{0e259d43-16df-4f85-b215-ab14b997d295}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[machine_name := _machine_name;]]></ST>
        </Implementation>
      </Get>
      <Set Name="Set" Id="{4756dd8a-6149-48dd-853d-999b60452861}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[_machine_name := machine_name;]]></ST>
        </Implementation>
      </Set>
    </Property>
    <Method Name="send_signal" Id="{9f165d7c-7f3a-47dc-b9d3-376769c753b7}">
      <Declaration><![CDATA[{warning 'add method implementation '}
METHOD send_signal : BOOL
VAR_INPUT
	pAlarm		: POINTER TO FB_Alarm;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[queue_controller.recorder := _recorder;
event_entry := pAlarm^.stEventEntry;
_event_activity.machine_id := _machine_name;
_event_activity.module_name := pAlarm^.module_name;
_event_activity.event_id := UDINT_TO_STRING(pAlarm^.nEventID);
_event_activity.uuid := GUID_TO_STRING(event_entry.uuidEventClass);
_event_activity.severity := pAlarm^.eSeverity;
_event_activity.text := pAlarm^.alarm_text;
_event_activity.status := pAlarm^.bActive;
queue_controller.data_def_structure_name := 'bajp_alarm_manager.EventActivityFields';
queue_controller.db_table_name := 'EventLogger';
queue_controller.minimum_chunk_size := 1;
queue_controller.maximum_chunk_size := 2;
queue_controller.buffer_size := AlarmEventParam.EVENT_LOG_BUFFER_SIZE;
queue_controller.write(input_data := F_BIGTYPE(ADR(_event_activity),SIZEOF(_event_activity)));
(*
q_put(lData := pAlarm);
*)]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="FB_AlarmDBListener">
      <LineId Id="9" Count="0" />
    </LineIds>
    <LineIds Name="FB_AlarmDBListener.FB_init">
      <LineId Id="7" Count="0" />
      <LineId Id="14" Count="0" />
    </LineIds>
    <LineIds Name="FB_AlarmDBListener.machine_name.Get">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_AlarmDBListener.machine_name.Set">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_AlarmDBListener.send_signal">
      <LineId Id="95" Count="14" />
      <LineId Id="68" Count="0" />
      <LineId Id="89" Count="0" />
      <LineId Id="11" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>